made on 13th june